feat: implement core backend infrastructure including database seeding, security configuration, and application environment settings